Adds header include file

--- a/inscripcion/app/templates/base.html
+++ b/inscripcion/app/templates/base.html
@@ -2,6 +2,10 @@
 
 {% block title %}Inscripciones ECCEJU 2018{% endblock %}
 
+{% block navbar %}
+  {% include "includes/header.html" %}
+{% endblock %}
+
 {% block content %}
 <div class="container">
   {% block page_content %}{% endblock %}
