Removes Material Flask extension

--- a/inscripcion/app/templates/formulario.html
+++ b/inscripcion/app/templates/formulario.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %}
+{% extends "default.html" %}
 
-{% block page_content %}
+{% block body %}
 <h1>Formulario de inscripción</h1>
 {% endblock %}
