--- a/inscripcion/app/templates/formulario.html
+++ b/inscripcion/app/templates/formulario.html
@@ -1,29 +1,53 @@
 {% extends "default.html" %}
 
 {% block body %}
-<h2>Formulario de inscripción</h2>
 
-<div class="row">
-  <form method="POST" class="col s12">
-    {{ form.hidden_tag() }}
+<form method="POST" class="col s12">
+  {{ form.hidden_tag() }}
+
+  <div class="container">
+    <h4>Formulario de inscripción</h4>
+    <hr>
 
     <div class="row">
-      <div class="input-field col s12 m6">
+      <div class="input-field col s12 l6">
         <i class="material-icons prefix">map</i>
         {{ form.localidad(class = 'validate') }}
         {{ form.localidad.label }}
       </div>
 
-      <div class="input-field col s12 m6">
+      <div class="input-field col s12 l6">
         <i class="material-icons prefix">account_circle</i>
         {{ form.servidor(class = 'validate') }}
         {{ form.servidor.label }}
       </div>
     </div>
 
-    {{ form.guardar(class = 'waves-effect waves-light btn') }}
+    <div class="row">
+      <div class="input-field col s12 m6">
+        <i class="material-icons prefix">attach_money</i>
+        {{ form.monto(class = 'validate') }}
+        {{ form.monto.label }}
+      </div>
 
-  </form>
-</div>
+      <div class="file-field input-field col s12 m6">
+        <div class="btn black">
+          <span>Subir</span>
+          {{ form.comprobante_uri }}
+        </div>
+        <div class="file-path-wrapper">
+          <input class="file-path validate" type="text" placeholder="Comprobante de pago" />
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div style="background: #ddd">
+    <div class="container last-post">
+      {{ form.guardar(class = 'waves-effect waves-light btn black right') }}
+      {{ form.enviar(class = 'waves-effect waves-light btn orange') }}
+    </div>
+  </div>
+</form>
 
 {% endblock %}
