--- a/inscripcion/app/templates/view_inscripcion.html
+++ b/inscripcion/app/templates/view_inscripcion.html
@@ -3,7 +3,15 @@
 {% block body %}
 
 <div class="container">
-  <h4 class="header red-text">Formulario de inscripción</h4>
+  <br/>
+  <div class="row">
+    <div class="col s10">
+      <h4 class="header red-text">Formulario de inscripción</h4>
+    </div>
+    <div class="col s2">
+      <a class="btn-floating btn-large waves-effect waves-light red right"><i class="material-icons">create</i></a>
+    </div>
+  </div>
 
   <div class="row">
     <div class="col s12 l6">
@@ -57,7 +65,7 @@
 
   <div class="row">
     <ul class="collection with-header">
-      <li class="collection-header"><h4 class="orange-text">Participantes</h4></li>
+      <li class="collection-header"><h5 class="orange-text">Participantes</h5></li>
       {% for participante in inscripcion.participantes %}
       <li class="collection-item">{{ participante.nombres_completos }}</li>
       {% endfor %}
