adds id in inscripcion model and fixes importation of scripts

--- a/inscripcion/app/templates/includes/script.html
+++ b/inscripcion/app/templates/includes/script.html
@@ -1,4 +1,4 @@
 <!--  Scripts-->
-<script src="{{ "static/js/jquery.min.js" }}"></script>
-<script src="{{ "static/js/materialize.min.js" }}"></script>
-<script src="{{ "static/js/init.js" }}"></script>
+<script src="{{ "/static/js/jquery.min.js" }}"></script>
+<script src="{{ "/static/js/materialize.min.js" }}"></script>
+<script src="{{ "/static/js/init.js" }}"></script>
