Adds show participante view/controller and adds id field in participante

--- a/inscripcion/app/templates/show_inscripcion.html
+++ b/inscripcion/app/templates/show_inscripcion.html
@@ -15,6 +15,16 @@
 
   <div class="row">
     <div class="col s12 l6">
+      <b>Identificador:</b>
+    </div>
+
+    <div class="col s12 l6">
+      {{ inscripcion.id }}
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col s12 l6">
       <b>Nombre de la Localidad:</b>
     </div>
 
