--- a/inscripcion/app/templates/index_inscripcion.html
+++ b/inscripcion/app/templates/index_inscripcion.html
@@ -9,14 +9,20 @@
       <li class="collection-header"><h4 class="header red-text">Inscripciones</h4></li>
       {% for inscripcion in inscripciones %}
       <li class="collection-item">
-        <span class="title">{{ inscripcion.localidad }}</span>
+        <h5 class="title orange-text">{{ inscripcion.localidad }}</h5>
         <p>
-          <b>Identificador:</b> {{ inscripcion.id }} <br>
+          <b>Identificador:</b> <a href="/inscripciones/{{ inscripcion.id }}">{{ inscripcion.id }}</a><br>
           <b>Monto:</b> {{ inscripcion.monto }}
         </p>
       </li>
       {% endfor %}
     </ul>
+  </div>
+
+  <div class="fixed-action-btn">
+    <a href="/inscripciones/new" class="btn-floating btn-large teal">
+       <i class="large material-icons">add</i>
+    </a>
   </div>
 </div>
 
