fixes submiting issue when a inscripcion is being created

--- a/inscripcion/app/templates/create_inscripcion.html
+++ b/inscripcion/app/templates/create_inscripcion.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<form method="POST" action="/inscripciones" enctype="multipart/form-data" class="col s12">
+<form method="POST" enctype="multipart/form-data" class="col s12">
   {{ form.hidden_tag() }}
 
   <div class="container">
