Migrates forms to use floating buttons

--- a/inscripcion/app/templates/show_inscripcion.html
+++ b/inscripcion/app/templates/show_inscripcion.html
@@ -5,11 +5,8 @@
 <div class="container">
   <br/>
   <div class="row">
-    <div class="col s10">
+    <div class="col s12">
       <h4 class="header red-text">Formulario de inscripción</h4>
-    </div>
-    <div class="col s2">
-      <a class="btn-floating btn-large waves-effect waves-light red right"><i class="material-icons">create</i></a>
     </div>
   </div>
 
@@ -71,6 +68,12 @@
     <div class="col s12 l6">
       {{ inscripcion.comprobante_uri }}
     </div>
+  </div>
+
+  <div class="fixed-action-btn">
+    <a href="/inscripciones/new" class="btn-floating btn-large blue darken-3">
+       <i class="large material-icons">create</i>
+    </a>
   </div>
 
 </div>
