--- a/inscripcion/app/templates/create_inscripcion.html
+++ b/inscripcion/app/templates/create_inscripcion.html
@@ -49,11 +49,12 @@
     </div>
   </div>
 
-  <div style="background: #ddd">
-    <div class="container last-post">
-      {{ form.guardar(class = 'waves-effect waves-light btn black') }}
-    </div>
+  <div class="fixed-action-btn">
+    <button type="submit" class="btn-floating btn-large black">
+      <i class="large material-icons">save</i>
+    </button>
   </div>
+
 </form>
 
 {% endblock %}
