--- a/inscripcion/app/templates/index_inscripcion.html
+++ b/inscripcion/app/templates/index_inscripcion.html
@@ -20,7 +20,7 @@
   </div>
 
   <div class="fixed-action-btn">
-    <a href="/inscripciones/new" class="btn-floating btn-large teal">
+    <a href="/inscripciones/new" class="btn-floating btn-large blue darken-3">
        <i class="large material-icons">add</i>
     </a>
   </div>
