--- a/inscripcion/app/templates/show_inscripcion.html
+++ b/inscripcion/app/templates/show_inscripcion.html
@@ -71,7 +71,7 @@
   </div>
 
   <div class="fixed-action-btn">
-    <a href="/inscripciones/new" class="btn-floating btn-large blue darken-3">
+    <a href="/inscripciones/{{ inscripcion.id }}/edit" class="btn-floating btn-large blue darken-3">
        <i class="large material-icons">create</i>
     </a>
   </div>
