--- a/inscripcion/app/templates/create_inscripcion.html
+++ b/inscripcion/app/templates/create_inscripcion.html
@@ -36,6 +36,7 @@
       </div>
     </div>
 
+    {% if feature.is_enabled("COMPROBANTE_PAGO") %}
     <div class="row">
       <div class="file-field input-field col s12">
         <div class="btn black">
@@ -47,6 +48,7 @@
         </div>
       </div>
     </div>
+    {% endif %}
   </div>
 
   <div class="fixed-action-btn">
