--- a/inscripcion/app/templates/show_participante.html
+++ b/inscripcion/app/templates/show_participante.html
@@ -6,7 +6,7 @@
   <br/>
   <div class="row">
     <div class="col s10">
-      <h4 class="header red-text">Detalle del participante</h4>
+      <h4 class="header red-text">Detalle del Participante</h4>
     </div>
     <div class="col s2">
       <a class="btn-floating btn-large waves-effect waves-light red right"><i class="material-icons">create</i></a>
