--- a/inscripcion/app/templates/show_inscripcion.html
+++ b/inscripcion/app/templates/show_inscripcion.html
@@ -72,6 +72,16 @@
   </div>
   {% endif %}
 
+  <div class="row">
+    <div class="col s12 l6">
+      <b>Participantes:</b>
+    </div>
+
+    <div class="col s12 l6">
+      <a href="/inscripciones/{{ inscripcion.id }}/participantes">Ver participantes</a>
+    </div>
+  </div>
+
   <div class="fixed-action-btn">
     <a href="/inscripciones/{{ inscripcion.id }}/edit" class="btn-floating btn-large blue darken-3">
        <i class="large material-icons">create</i>
