Adds login logic

--- a/inscripcion/app/templates/default.html
+++ b/inscripcion/app/templates/default.html
@@ -6,6 +6,7 @@
 
   <body>
     {% include "includes/header.html" %}
+    {% include "includes/messages.html" %}
     {% block body %}{% endblock %}
     {% include "includes/footer.html" %}
     {% include "includes/script.html" %}
