--- a/inscripcion/app/static/css/main.css
+++ b/inscripcion/app/static/css/main.css
@@ -1,3 +1,13 @@
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
+}
+
 h1, h2, h3, h4, h5, h6 {
   -webkit-font-smoothing: antialiased; }
 
