--- a/inscripcion/app/templates/includes/footer.html
+++ b/inscripcion/app/templates/includes/footer.html
@@ -8,11 +8,11 @@
         <div class="col l3 s12">
           <h5 class="white-text">Enlaces de interés</h5>
           <ul>
-            <li><a class="white-text" href="#">Programación</a></li>
-            <li><a class="white-text" href="#">Ministerios</a></li>
-            <li><a class="white-text" href="#">Música</a></li>
-            <li><a class="white-text" href="#">Inscripciones</a></li>
-            <li><a class="white-text" href="#">Acerca de</a></li>
+            <li><a class="white-text" href="{{ site['ecceju-urls']['programacion'] }}">Programación</a></li>
+            <li><a class="white-text" href="{{ site['ecceju-urls']['ministerios'] }}">Ministerios</a></li>
+            <li><a class="white-text" href="{{ site['ecceju-urls']['musica'] }}">Música</a></li>
+            <li><a class="white-text" href="{{ site['ecceju-urls']['inscripciones'] }}">Inscripciones</a></li>
+            <li><a class="white-text" href="{{ site['ecceju-urls']['acerca-de'] }}">Acerca de</a></li>
           </ul>
         </div>
         <div class="col l3 s12">
