--- a/inscripcion/app/templates/index_inscripcion.html
+++ b/inscripcion/app/templates/index_inscripcion.html
@@ -9,10 +9,11 @@
       <li class="collection-header"><h4 class="header red-text">Inscripciones</h4></li>
       {% for inscripcion in inscripciones %}
       <li class="collection-item">
-        <h5 class="title orange-text">{{ inscripcion.localidad }}</h5>
+        <a href="/inscripciones/{{ inscripcion.id }}">
+          <h5 class="title orange-text">{{ inscripcion.localidad }}</h5>
+        </a>
         <p>
-          <b>Identificador:</b> <a href="/inscripciones/{{ inscripcion.id }}">{{ inscripcion.id }}</a><br>
-          <b>Monto:</b> {{ inscripcion.monto }}
+          <b>Monto total:</b> {{ inscripcion.total_amount() }}
         </p>
       </li>
       {% endfor %}
