--- a/inscripcion/app/templates/index_participante.html
+++ b/inscripcion/app/templates/index_participante.html
@@ -9,11 +9,9 @@
       <li class="collection-header"><h4 class="header red-text">Participantes</h4></li>
       {% for participante in participantes %}
       <li class="collection-item">
-        <h5 class="title orange-text">{{ participante.nombres_completos }}</h5>
-        <p>
-          <b>Identificador: </b>
-          <a href="/inscripciones/{{ inscripcion_id }}/participantes/{{ participante.id }}"> {{ participante.id }} </a>
-        </p>
+        <a href="/inscripciones/{{ inscripcion_id }}/participantes/{{ participante.id }}">
+          <h5 class="title orange-text">{{ participante.nombres_completos }}</h5>
+        </a>
       </li>
       {% endfor %}
     </ul>
