--- a/inscripcion/app/templates/index_participante.html
+++ b/inscripcion/app/templates/index_participante.html
@@ -6,7 +6,10 @@
   <br/>
   <div class="row">
     <ul class="collection with-header">
-      <li class="collection-header"><h4 class="header red-text">Participantes</h4></li>
+      <li class="collection-header">
+        <h4 class="header red-text">Participantes</h4>
+        <b>Monto total:</b> {{ monto_total }} USD
+      </li>
       {% for participante in participantes %}
       <li class="collection-item">
         <a href="/inscripciones/{{ inscripcion_id }}/participantes/{{ participante.id }}">
