--- a/inscripcion/app/templates/show_inscripcion.html
+++ b/inscripcion/app/templates/show_inscripcion.html
@@ -54,6 +54,16 @@
 
   <div class="row">
     <div class="col s12 l6">
+      <b>Monto total:</b>
+    </div>
+
+    <div class="col s12 l6">
+      {{ monto_total }}
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col s12 l6">
       <b>Participantes:</b>
     </div>
 
