--- a/inscripcion/app/templates/401.html
+++ b/inscripcion/app/templates/401.html
@@ -2,10 +2,11 @@
 
 {% block body %}
 
-<div class="container">
-  <div class="row">
-    <p>Lo sentimos, no tienes permisos para acceder a este sitio.<p>
-  </div>
+<div class="container center">
+  <h1>401</h1>
+
+  <p><strong>No tienes acceso :(</strong></p>
+  <p>Lo sentimos, no tienes permisos para acceder a este sitio.<p>
 </div>
 
 {% endblock %}
