--- a/inscripcion/app/templates/includes/messages.html
+++ b/inscripcion/app/templates/includes/messages.html
@@ -1,6 +1,6 @@
-{% for message in get_flashed_messages() %}
+{% for category, message in get_flashed_messages(with_categories=true) %}
 <div class="container">
-  <div class="card-panel red">
+  <div class="card-panel {{ category }}">
     <span class="white-text">
       {{ message }}
     </span>
