--- a/inscripcion/app/templates/index_inscripcion.html
+++ b/inscripcion/app/templates/index_inscripcion.html
@@ -8,10 +8,11 @@
     <ul class="collection with-header">
       <li class="collection-header"><h4 class="header red-text">Inscripciones</h4></li>
       {% for inscripcion in inscripciones %}
-      <li class="collection-item">
-        <a href="/inscripciones/{{ inscripcion.id }}">
-          <h5 class="title orange-text">{{ inscripcion.localidad }}</h5>
+      <li class="collection-item avatar">
+        <a href="/inscripciones/{{ inscripcion.object.id }}">
+          <span class="title orange-text">{{ inscripcion.object.localidad }}</span>
         </a>
+        <p><b>Monto total: </b>${{ inscripcion.total_amount }} USD<br/> <b>Total inscritos: </b>{{ inscripcion.total_participantes }}</p>
       </li>
       {% endfor %}
     </ul>
