changes not allowed code and adds preventa list page

--- a/inscripcion/app/templates/403.html
+++ b/inscripcion/app/templates/403.html
@@ -3,10 +3,10 @@
 {% block body %}
 
 <div class="container center">
-  <h1>401</h1>
+  <h1>403</h1>
 
   <p><strong>No tienes acceso :(</strong></p>
-  <p>Lo sentimos, no tienes permisos para acceder a este sitio.<p>
+  <p>Lo sentimos, no tienes permiso para acceder a este sitio.<p>
 </div>
 
 {% endblock %}
