--- a/inscripcion/app/static/css/main.css
+++ b/inscripcion/app/static/css/main.css
@@ -1,4 +1,15 @@
+@charset "utf-8";
+@import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
+@import url('https://fonts.googleapis.com/css?family=Sunflower:300');
+
+h1, h2, h3, h4, h5, h6 {
+  ¦ -webkit-font-smoothing: antialiased;
+  ¦ font-family: 'Yanone Kaffeesatz';
+  ¦ font-weight: normal;
+}
+
 body {
+  font-family: 'Sunflower', 'Roboto';
   display: flex;
   min-height: 100vh;
   flex-direction: column;
