--- a/inscripcion/app/templates/includes/head.html
+++ b/inscripcion/app/templates/includes/head.html
@@ -7,4 +7,5 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen,projection" href="{{ "/static/css/materialize.css" }}" />
     <link rel="stylesheet" type="text/css" media="screen,projection" href="{{ "/static/css/main.css" }}">
+    <link rel="shortcut icon" type="image/png" href="/static/img/favicon.png" />
 </head>
